works with this version

--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,4 @@ NODE_ENV=development
 PORT=8000
 CLIENT_URL=http://localhost:3000
 DATABASE_CLOUD='mongodb+srv://admin:dev@strataroofing@strataroofing.iwjth.mongodb.net/Strataroofing?retryWrites=true&w=majority'
+JWT_SECRET_KEY=3491t5hfesdhvkweo3eru23fb435093406
