--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@zeit/next-sass": "^1.0.1",
+    "classnames": "^2.2.6",
     "next": "^9.5.3",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
-    "reactstrap": "^8.6.0"
+    "reactstrap": "^8.6.0",
+    "sass": "^1.26.11"
+  },
+  "devDependencies": {
+    "@types/node": "^14.11.2",
+    "@types/react": "^16.9.49",
+    "typescript": "^4.0.3"
   }
 }
