--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@zeit/next-sass": "^1.0.1",
     "classnames": "^2.2.6",
     "isomorphic-fetch": "^3.0.0",
+    "js-cookie": "^2.2.1",
     "next": "^9.5.3",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
